--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ input {
 <main>
 <!--menu section-->
   <div class="image-container" id="menu">    
-    <img class="centerimg" style="height: 950px; width: 850px; padding: 20px;"  src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\burntpaper.png" alt="menu-image">
+    <img class="centerimg" style="height: 950px; width: 850px; padding: 20px;"  src="https://github.com/TGore714/RNSSSBBQ/blob/main/images.html/burntpaper.png" alt="menu-image">
     <img class="barbed-bordermenu" src="C:\Users\tyler\Downloads\clipart1302053 (1).png" alt="barbed-border">
     <div class="text-overlay" style="color:black;">
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> Menu </h2>
@@ -250,8 +250,8 @@ input {
       <!--about section-->
     <div>
       <div class="column middle image-container" id="about">    
-    <img class="centerimg" style="height: 850px; width: 820px; padding: 20px;"  src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\burntpaper.png" alt="about image">
-    <img class="barbed-borderabout" src="C:\Users\tyler\Downloads\clipart1302053 (1).png" alt="barbed-border">
+    <img class="centerimg" style="height: 850px; width: 820px; padding: 20px;"  src="https://github.com/TGore714/RNSSSBBQ/blob/main/images.html/burntpaper.png" alt="about image">
+    <img class="barbed-borderabout" src="https://github.com/TGore714/RNSSSBBQ/blob/main/images.html/barbed-wire.png" alt="barbed-border">
     <div class="word-overlay" style="color:black;">
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> about us </h2>  
         <p style="font-size: large;">
@@ -268,7 +268,7 @@ input {
 <!--column sections-->
       <div class="column left">
     <h3 style="color: darkgoldenrod; font-size: large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> 
-      <img class="logo" src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>   
+      <img class="logo" src="https://github.com/TGore714/RNSSSBBQ/blob/main/images.html/transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>   
       <form type="hidden" action="https://formsubmit.co/urbanekryan06@gmail.com" method="POST" target="_blank">
         <input style="background-color:rgb(0, 0, 0);" cols="25" rows="1" type="text" name="fname" placeholder="first name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="lname" placeholder="last name" required><br>
