--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ input {
 <main>
 <!--menu section-->
   <div class="image-container" id="menu">    
-    <img class="centerimg" style="height: 950px; width: 850px; padding: 20px;"  src="https://github.com/TGore714/RNSSSBBQ/raw/main/images.html/burntpaper.png" alt="menu-image">
+    <img class="centerimg" style="height: 950px; width: 850px; padding: 20px;"  src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/burntpaper.png" alt="menu-image">
     <img class="barbed-bordermenu" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/barbed-wire.png" alt="barbed-border">
     <div class="text-overlay" style="color:black;">
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> Menu </h2>
@@ -250,7 +250,7 @@ input {
       <!--about section-->
     <div>
       <div class="column middle image-container" id="about">    
-    <img class="centerimg" style="height: 850px; width: 820px; padding: 20px;"  src="https://github.com/TGore714/RNSSSBBQ/raw/main/images.html/burntpaper.png" alt="about image">
+    <img class="centerimg" style="height: 850px; width: 820px; padding: 20px;"  src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/burntpaper.png" alt="about image">
     <img class="barbed-borderabout" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/barbed-wire.png" alt="barbed-border">
     <div class="word-overlay" style="color:black;">
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> about us </h2>  
