--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ input {
 <!--column sections-->
       <div class="column left">
     <h3 style="color: darkgoldenrod; font-size: large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> 
-      <img class="logo" src="https://github.com/TGore714/RNSSSBBQ/blob/main/images.html/transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>   
+      <img class="logo" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>   
       <form type="hidden" action="https://formsubmit.co/urbanekryan06@gmail.com" method="POST" target="_blank">
         <input style="background-color:rgb(0, 0, 0);" cols="25" rows="1" type="text" name="fname" placeholder="first name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="lname" placeholder="last name" required><br>
