--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ input {
     <div>
           <nav class="nav">
             <ul style="position: sticky; top: 0px;">
-              <li><a href="file:///C:/Users/tyler/OneDrive/Desktop/r%26n.html">Home</a></li>
-              <li><a href="file:///C:/Users/tyler/OneDrive/Desktop/randnmenu.html">Menu</a></li>  
-              <li><a href="file:///C:/Users/tyler/OneDrive/Desktop/randnabout%20-%20Copy.html">About</a></li>
-              <li><a href="file:///C:/Users/tyler/OneDrive/Desktop/randncontact.html">Contact</a></li>
+              <li><a href="https://github.com/TGore714/RNSSSBBQ/blob/main/index.html">Home</a></li>
+              <li><a href="https://github.com/TGore714/RNSSSBBQ/blob/main/randnmenu.html">Menu</a></li>  
+              <li><a href="https://github.com/TGore714/RNSSSBBQ/blob/main/randnabout%20-%20Copy.html">About</a></li>
+              <li><a href="https://github.com/TGore714/RNSSSBBQ/blob/main/randncontact.html">Contact</a></li>
             </ul>
         </nav>
     </div>      
@@ -242,9 +242,9 @@ input {
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> Menu </h2>
 
       <menu>
-        <li><a href="#"><img style="height: 100x; width: 150px;" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/322583677_696621441864231_1144182758207638776_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=c4c01c&_nc_ohc=cCNRwyBNpyYAX8rRueJ&_nc_ht=scontent-dfw5-1.xx&oh=00_AfBqt2hy-jZaoRNNMOTeuLyyIWEDWKQGH1Anac6kcZcWpw&oe=642135C3" alt="brisket"></a></li>
-        <li><a href="#"><img style="height: 100px; width: 150px;" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/323893183_1223446101916302_7324409125215650934_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=c4c01c&_nc_ohc=SQ1-G3Ho7eYAX8Cm2-a&_nc_ht=scontent-dfw5-1.xx&oh=00_AfC9ufSnGL0H--20iIh2CzuUN39X_Uhcypx0YBgsWFfrZA&oe=64225F88" alt="ribs"></a></li>
-        <li><a href="#"><img style="height: 150px; width: 150px;" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/324419333_693469902260005_8082972120687711927_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=c4c01c&_nc_ohc=z0FW35AuEIEAX-CNQjY&_nc_ht=scontent-dfw5-1.xx&oh=00_AfCRz3eo9NzOYJnYwC1W33Pqrju-Kn6T9_SNF59RoJ8RUQ&oe=64222661" alt="bbq sauce"></a></li>
+        <li><a href="#"><img style="height: 100x; width: 150px;" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/322591667_689636656000858_8307629822933839539_n.jpg" alt="brisket"></a></li>
+        <li><a href="#"><img style="height: 100px; width: 150px;" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/323893183_1223446101916302_7324409125215650934_n.jpg" alt="ribs"></a></li>
+        <li><a href="#"><img style="height: 150px; width: 150px;" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/324419333_693469902260005_8082972120687711927_n.jpg" alt="bbq sauce"></a></li>
       </menu> 
     </div>
       <!--about section-->
