--- a/randnabout - Copy.html
+++ b/randnabout - Copy.html
@@ -219,8 +219,8 @@ input {
 
 <div>
   <div class="column middle image-container" id="about">    
-    <img class="centerimg" style="height: 800px; width: 800px; padding: 20px;"  src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\burntpaper.png" alt="about image">
-    <img class="barbed-bordermenu" src="C:\Users\tyler\Downloads\clipart1302053 (1).png" alt="barbed-border">  
+    <img class="centerimg" style="height: 800px; width: 800px; padding: 20px;"  src="images.html/burntpaper.png" alt="about image">
+    <img class="barbed-bordermenu" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/barbed-wire.png" alt="barbed-border">  
     <div class="word-overlay" style="color:black;">
         <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> About Us </h2>
           <p style="font-size: large;">
@@ -236,7 +236,7 @@ input {
   </div>
 </div>
 <div class="column left">
-  <h3 style="color: darkgoldenrod; font-size: large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> <img class="logo" src="C:\Users\tyler\OneDrive\Pictures\Saved Pictures\transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>
+  <h3 style="color: darkgoldenrod; font-size: large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> <img class="logo" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>
   <form type="hidden" action="https://formsubmit.co/urbanekryan06@gmail.com" method="POST" target="_blank">
       <input style="background-color:rgb(0, 0, 0);" cols="25" rows="1" type="text" name="fname" placeholder="first name" required><br>
       <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="lname" placeholder="last name" required><br>
