--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Rye&display=swap" rel="stylesheet">
    <title>R&N Smokin Sweet Savour BBQ</title>
+
+ @media (max-width: 767px) {
+  /* Reduce font sizes for easier reading on small screens */
+  body {
+    font-size: 16px;
+  }
+  
+  /* Make sure images don't overflow their containers */
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  /* Adjust layout for smaller screens */
+  .container {
+    padding: 20px;
+  }
+  
+  /* Hide some elements that are not essential on small screens */
+  .sidebar {
+    display: none;
+  }
+}
+
 <style>
     /* background image */
     body{
