--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="discription" content="homestyle brisket, homemade bbq sauce and more">
     <meta name="author" content="Tyler Gore">
     <meta http-equiv="refresh" content="30">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=960px">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
