--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@ input {
 @media only screen and (max-width: 600px) {
   /* styles for screens 600px and below */
   .header {
-    height: 70px;
+    height: 20px;
   }
   .nav {
     font-size: 14px;
   }
   .column {
-    width: 100%;
-    position: static;
+    width: 50%;
+    position: relative;
   }
 }
 
