--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ img {
 </style>
 </head>
 <body>
-<header id="home">    
+<header class="header">    
     <h1 class="header">
         R&N Smokin Sweet Savour BBQ
     </h1>
