--- a/index.html
+++ b/index.html
@@ -125,30 +125,17 @@
   clear: both;
 }
 
-/* default styles for your website */
+/* default styles for website */
 
 body {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
 }
-
-/* media query for screens smaller than 768px */
-@media screen and (max-width: 767px) {
-  body {
-    max-width: 100%;
-    padding: 0 10px;
-  }
-}
+  
 .about{
   align-items: center;
 }
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column.middle {
-    width: 100%;
-    align-items: center;}}
-    
 
 .word-overlay {
   position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
