--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ input {
 @media only screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
   .header {
-    height: 100px;
+    height: 20px;
   }
   .nav {
     font-size: 16px;
@@ -243,7 +243,7 @@ input {
 @media only screen and (min-width: 901px) {
   /* styles for screens 901px and above */
   .header {
-    height: 150px;
+    height: 20px;
   }
   .nav {
     font-size: 18px;
@@ -279,7 +279,7 @@ img {
 </style>
 </head>
 <body>
-<header class="header">    
+<header>    
     <h1 class="header">
         R&N Smokin Sweet Savour BBQ
     </h1>
