--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         font-family: 'Cinzel', serif;
         font-family: 'Rye', cursive;
         text-align: center;
-        color:darkgoldenrod;
+        color: darkgoldenrod;
         width: 100%;
         height: 20px;   
       }
@@ -206,8 +206,9 @@ input {
 @media only screen and (max-width: 600px) {
   /* styles for screens 600px and below */
   .header {
-    height: 20px;
-  }
+    height: 45px;
+    width: 100%;
+    }
   .nav {
     font-size: 14px;
   }
@@ -220,8 +221,9 @@ input {
 @media only screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
   .header {
-    height: 20px;
-  }
+    height: 45px;
+    width: 100%;
+    }
   .nav {
     font-size: 16px;
   }
@@ -243,8 +245,9 @@ input {
 @media only screen and (min-width: 901px) {
   /* styles for screens 901px and above */
   .header {
-    height: 20px;
-  }
+    height: 45px;
+    width: 100%;
+    }
   .nav {
     font-size: 18px;
   }
