--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="keywords" content="brisket, bbq, food, homemade food, homestyle bbq, bbq sauce">
-    <meta name="discription" content="homestyle brisket, homemade bbq sauce and more">
+    <meta name="description" content="homestyle brisket, homemade bbq sauce and more">
     <meta name="author" content="Tyler Gore">
     <meta http-equiv="refresh" content="30">
 
