--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         margin: 0 auto;
         width: 100%;
     }
-    /* obveously this is the header */
+    /* obviously this is the header */
     .header{
         background-color: black;
         font-family: 'Cinzel', serif;
@@ -101,7 +101,7 @@
 /* Left column*/
 .column.left{
   width: 25%;
-  float: left top;
+  float: left, top;
   position: absolute;
   top: 200px;
   right: 920px;
@@ -247,7 +247,8 @@ input {
   position: absolute;
   top: 200px;
   right: 300px;
-}
+  display: none;
+    }
 /*right column*/
 .column.right{
   width: 25%;
@@ -255,7 +256,8 @@ input {
   top: 40px;
   left: 300px;
   position: absolute;
-}
+  display: none;
+    }
 /* Middle column */
 .column.middle {
   width: 50%;
