--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="description" content="homestyle brisket, homemade bbq sauce and more">
     <meta name="author" content="Tyler Gore">
     <meta http-equiv="refresh" content="30">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Rye&display=swap" rel="stylesheet">
@@ -201,7 +202,7 @@ input {
    position: absolute;
    z-index: -1;
   }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   /* styles for screens 600px and below */
   .header {
     height: 45px;
