--- a/index.html
+++ b/index.html
@@ -261,11 +261,12 @@ input {
     }
 /* Middle column */
 .column.middle {
-  width: 50%;
+  width: 100%;
   float: right;
   position: absolute;
   right: 150px;
-}
+  top: 200px;
+    }
    .nav {
   background-color: black;
   overflow: hidden;
@@ -309,14 +310,14 @@ input {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    height: 120px; 
-    width: 200px; 
+    height: 450px; 
+    width: 600px; 
     padding: 10px;
     } 
     
     }
 
-@media only screen and (min-width: 601px) and (max-width: 900px) {
+@media screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
   .header {
     height: 45px;
@@ -340,7 +341,7 @@ input {
   }
 }
 
-@media only screen and (min-width: 901px) {
+@media screen and (min-width: 901px) {
   /* styles for screens 901px and above */
   .header {
     height: 45px;
