--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ img {
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> Menu </h2>
 
       <menu>
-        <li><a href="#"><img style="height: 100x; width: 150px;" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/327577521_5715862081865549_5598691425434264534_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=a26aad&_nc_ohc=6GOYTJNG_0oAX-auxmg&_nc_ht=scontent-dfw5-1.xx&oh=00_AfBXGsYUOpxuD-9kOyZiVqI2mHb1jz5EsI-AWmcOdx5eDg&oe=6430B3B1" alt="brisket"></a></li>
+        <li><a href="#"><img style="height: 100x; width: 150px;" src="images.html/342617901_576875567861758_8528698317264841039_n.jpg" alt="brisket"></a></li>
         <li><a href="#"><img style="height: 100px; width: 150px;" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/323893183_1223446101916302_7324409125215650934_n.jpg" alt="ribs"></a></li>
         <li><a href="#"><img style="height: 150px; width: 150px;" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/324419333_693469902260005_8082972120687711927_n.jpg" alt="bbq sauce"></a></li>
       </menu> 
