--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ input {
    position: absolute;
    z-index: -1;
   }
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
   /* styles for screens 600px and below */
   .header {
     height: 45px;
