--- a/index.html
+++ b/index.html
@@ -202,8 +202,10 @@ input {
    position: absolute;
    z-index: -1;
   }
-@media (max-width: 600px) {
-  /* styles for screens 600px and below */
+
+    /*phone style settings*/
+    
+    @media (max-width: 600px) {
   .header {
     height: 50px;
     width: 100%;
@@ -309,8 +311,8 @@ input {
    margin-left: auto;
     margin-right: auto;
     display: block;
-    height: 400px; 
-    width: 850px; 
+    height: 200px; 
+    width: 500px; 
     padding: 20px;
     }
     }
