--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ input {
     
     @media (max-width: 600px) {
   .header {
-    height: 100px;
+    height: 90px;
     width: 100%;
     }
   .nav {
@@ -269,8 +269,8 @@ input {
   right: 395px;
    .nav {
   background-color: black;
-  overflow: hidden;
-  height: 50%;
+  overflow: auto;
+  height: 25%;
     }
 
 
