--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ img {
         <input style="background-color:rgb(0, 0, 0);" cols="25" rows="1" type="text" name="fname" placeholder="first name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="lname" placeholder="last name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="address" placeholder="address"><br>
-        <textarea style="background-color:rgb(0, 0, 0);" cols="25" rows="4" type="text" name="info" placeholder="extra info" required></textarea><br>
+        <textarea style="color: darkgoldenrod; background-color:rgb(0, 0, 0);" cols="25" rows="4" type="text" name="info" placeholder="extra info" required></textarea><br>
         <input style="background-color:rgb(0, 0, 0)" type="email" cols="25" rows="1" name="email" placeholder="email" required><br>
         <button class="button" type="submit">Submit</button><br>
     </form>
