--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@ input {
     .barbed-bordermenu {
  z-index: 2;
   width: 550px;
-  height: 650px;
-  top: 150px;
-  left: 70px;
+  height: 700px;
+  top: 200px;
+  left: 90px;
   position: absolute;
 }
 .barbed-borderabout {
@@ -264,7 +264,7 @@ input {
     }
 /* Middle column */
 .column.middle {
-  width: 50%;
+  width: 70%;
   float: right;
   position: absolute;
   right: 395px;
@@ -449,7 +449,13 @@ img {
   <a style="height: 200px; width: 200px" href="https://www.instagram.com/rnsmokinsweetsavourbbq/" target="_blank"><button class="button"">Instagram</button></a>
 </div>
 </main>
-<footer class="footer" id="footer" style="color: darkgoldenrod;">
+
+  <script>
+    var element = document.getElementById("myElement");
+    element.parentNode.removeChild(element);
+  </script>     
+ 
+ <footer class="footer" id="footer" style="color: darkgoldenrod;">
    <h3 style="padding-left: 20px;"> 
     Contact Us: 
    </h3>
