--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@ input {
    left: -90px;
    position: absolute;
    z-index: -1;
-  }
+   display: none;
+        }
     .barbed-bordermenu {
  z-index: 2;
   width: 550px;
@@ -243,7 +244,7 @@ input {
   height: 20px; 
   background-color: black; 
   color: darkgoldenrod;
-}
+        }
 /* Left column*/
 .column.left{
   width: 25%;
@@ -449,12 +450,6 @@ img {
   <a style="height: 200px; width: 200px" href="https://www.instagram.com/rnsmokinsweetsavourbbq/" target="_blank"><button class="button"">Instagram</button></a>
 </div>
 </main>
-
-  <script>
-    var element = document.getElementById("myElement");
-    element.parentNode.removeChild(element);
-  </script>     
- 
  <footer class="footer" id="footer" style="color: darkgoldenrod;">
    <h3 style="padding-left: 20px;"> 
     Contact Us: 
