--- a/index.html
+++ b/index.html
@@ -318,7 +318,10 @@ input {
     padding: 5px;
     }
     }
-
+image-container {
+  position: relative; /* set position to relative to create a positioning context for the child elements */
+}
+        
 @media screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
   .header {
