--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ img {
     <h1 class="header">
         R&N Smokin Sweet Savour BBQ
     </h1>
-    <div>
+    <div id= "delnav">
           <nav class="nav">
             <ul style="position: sticky; top: 0px;">
               <li><a href="https://github.com/TGore714/RNSSSBBQ/blob/main/index.html">Home</a></li>
@@ -460,7 +460,12 @@ img {
   <a style="height: 200px; width: 200px" href="https://www.facebook.com/RNsssBBQ" target="_blank"><button class="button">Facebook</button></a>
   <a style="height: 200px; width: 200px" href="https://www.instagram.com/rnsmokinsweetsavourbbq/" target="_blank"><button class="button"">Instagram</button></a>
 </div>
-</main>
+<script>
+var divElement = document.getElementById("delnav");
+divElement.remove();
+</script>
+      
+ </main>
  <footer class="footer" id="footer" style="color: darkgoldenrod;">
    <h3 style="padding-left: 20px;"> 
     Contact Us: 
