--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ img {
       <div class="column left element-to-hide">
     <h3 style="color: darkgoldenrod; font-size: large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> 
       <img class="logo" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/transparent-logo.png" alt="logo img"><br><br> We Cater!</h3>   
-      <form type="hidden" action="https://formsubmit.co/ryan@rnsssbbq.com" method="POST" target="_blank">
+      <form type="hidden" action="https://formsubmit.co/ryan@rnsssbbq.com" method="POST">
         <input style="background-color:rgb(0, 0, 0);" cols="25" rows="1" type="text" name="fname" placeholder="first name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="lname" placeholder="last name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="address" placeholder="address"><br>
