--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@ input {
     display: block;
     height: 100px; 
     width: 200px; 
-    padding: 5px;
+    padding: 100px;
     }
 image-container {
-  position: relative; /* set position to relative to create a positioning context for the child elements */
+  position: relative; 
 }
 }
 @media screen and (min-width: 601px) and (max-width: 900px) {
