--- a/index.html
+++ b/index.html
@@ -316,9 +316,12 @@ input {
     width: 200px; 
     padding: 100px;
     }
-image-container {
+.image-container {
   position: relative; 
 }
+
+        
+
 }
 @media screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
