--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ img {
    <div id="video-carousel">
     <div class="video-container">
       <!-- Video 1 -->
-      <iframe src="https://www.youtube.com/embed/https://youtube.com/shorts/oIyKReiX8yc?feature=share" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F469069525394078%2F&show_text=false&width=560&t=0" width="100" height="70" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
     <div class="video-container">
       <!-- Video 2 -->
@@ -484,7 +484,7 @@ img {
 
   <script>
       const videoUrls = [
-  "https://www.youtube.com/embed/https://youtube.com/shorts/oIyKReiX8yc?feature=share",
+  "https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F469069525394078%2F&show_text=false&width=560&t=0",
   "https://www.youtube.com/embed/https://youtube.com/shorts/tMw3VeoiSWU?feature=share",
   "https://www.youtube.com/embed/https://youtube.com/shorts/v3NrZZvsuHE?feature=share"
 ];
