--- a/index.html
+++ b/index.html
@@ -467,15 +467,15 @@ img {
    <div id="video-carousel">
     <div class="video-container">
       <!-- Video 1 -->
-      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F469069525394078%2F&show_text=false&width=560&t=0" width="100" height="70" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F469069525394078%2F&show_text=false&width=560&t=0" width="500" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
     <div class="video-container">
       <!-- Video 2 -->
-      <iframe src="https://www.youtube.com/embed/https://youtube.com/shorts/tMw3VeoiSWU?feature=share" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F720849325739246%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
     <div class="video-container">
       <!-- Video 3 -->
-      <iframe src="https://www.youtube.com/embed/https://youtube.com/shorts/v3NrZZvsuHE?feature=share" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F1172072816759172%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
   </div>
 
@@ -485,29 +485,30 @@ img {
   <script>
       const videoUrls = [
   "https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F469069525394078%2F&show_text=false&width=560&t=0",
-  "https://www.youtube.com/embed/https://youtube.com/shorts/tMw3VeoiSWU?feature=share",
-  "https://www.youtube.com/embed/https://youtube.com/shorts/v3NrZZvsuHE?feature=share"
+  "https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F720849325739246%2F&show_text=false&width=267&t=0",
+  "https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F1172072816759172%2F&show_text=false&width=267&t=0"
 ];
 const prevButton = document.getElementById("prev-button");
 const nextButton = document.getElementById("next-button");
-const videoContainer = document.querySelector("#video-carousel .video-container");
+const videoContainers = document.querySelectorAll("#video-carousel .video-container");
 
 let currentVideoIndex = 0;
 
 prevButton.addEventListener("click", () => {
-  currentVideoIndex = (currentVideoIndex - 1 + videoUrls.length) % videoUrls.length;
-  updateVideo();
+  showVideo((currentVideoIndex - 1 + videoContainers.length) % videoContainers.length);
 });
 
 nextButton.addEventListener("click", () => {
-  currentVideoIndex = (currentVideoIndex + 1) % videoUrls.length;
-  updateVideo();
+  showVideo((currentVideoIndex + 1) % videoContainers.length);
 });
 
-function updateVideo() {
-  const videoUrl = videoUrls[currentVideoIndex];
-  videoContainer.innerHTML = `<iframe src="${videoUrl}" width="560" height="315" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
+function showVideo(videoIndex) {
+  videoContainers[currentVideoIndex].style.display = "none";
+  videoContainers[videoIndex].style.display = "block";
+  currentVideoIndex = videoIndex;
 }
+
+showVideo(currentVideoIndex);
 
       
 </script>
