--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ input {
     .barbed-bordermenu {
  z-index: 2;
   width: 550px;
-  height: 700px;
+  height: 670px;
   top: 110px;
   left: 30px;
   position: absolute;
@@ -309,19 +309,23 @@ input {
     width: 100%;  
   }
     .centerimg{
-   margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
     display: block;
-    height: 100px; 
+    height: 70px; 
     width: 200px; 
     padding: 100px;
     }
 .image-container {
   position: relative; 
 }
-
-        
-
+.centerimgabt {
+  width: 25%;
+  float: right;
+  position: absolute;
+  top: 200px;
+  right: 300px;
+  display: block;
 }
 @media screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
@@ -428,7 +432,7 @@ img {
       <!--about section-->
     <div>
       <div class="column middle image-container" id="about">    
-    <img class="centerimg" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/burntpaper.png" alt="about image">
+    <img class="centerimg centerimgabt" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/burntpaper.png" alt="about image">
     <img class="barbed-borderabout" src="https://raw.githubusercontent.com/TGore714/RNSSSBBQ/main/images.html/barbed-wire.png" alt="barbed-border">
     <div class="word-overlay" style="color:black;">
        <h2 style="font-size: xx-large; font-family: 'Cinzel', serif; font-family: 'Rye', cursive;"> about us </h2>  
