--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@ input {
   position: relative; 
 }
 .centerimgabt {
-  width: 25%;
+  height: 70px;
+  width: 200px;
   float: right;
   position: absolute;
   top: 200px;
