--- a/index.html
+++ b/index.html
@@ -320,6 +320,8 @@ input {
   position: relative; 
 }
 .centerimgabt {
+  margin-left: auto;
+  margin-right: auto;
   height: 70px;
   width: 200px;
   float: right;
