--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@ input {
    position: absolute;
    z-index: -1;
   }
-
+.video-container {
+    display: none;
+    }
     /*phone style settings*/
     
     @media (max-width: 600px) {
