--- a/index.html
+++ b/index.html
@@ -476,15 +476,15 @@ img {
    <div id="video-carousel">
     <div class="video-container">
       <!-- Video 1 -->
-     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F720849325739246%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true" autoplay muted></iframe>
+     <iframe width="367" height="653" src="https://www.youtube.com/embed/tMw3VeoiSWU" title="April 7, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen autoplay muted></iframe>
     </div>
     <div class="video-container">
       <!-- Video 2 -->
-     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F925407591843481%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true" autoplay muted></iframe>
+    <iframe width="367" height="653" src="https://www.youtube.com/embed/sRcflJhdHXQ" title="May 1, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen autoplay muted></iframe>
     </div>
     <div class="video-container">
       <!-- Video 3 --> 
-      <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F1172072816759172%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true" autoplay muted></iframe>
+    <iframe width="367" height="653" src="https://www.youtube.com/embed/oIyKReiX8yc" title="May 4, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen autoplay muted></iframe>
     </div>
   </div>
 
@@ -493,9 +493,9 @@ img {
 
   <script>
       const videoUrls = [
-  "https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F720849325739246%2F&show_text=false&width=267&t=0",
-  "https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F925407591843481%2F&show_text=false&width=267&t=0",
-  "https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FRNsssBBQ%2Fvideos%2F1172072816759172%2F&show_text=false&width=267&t=0"
+  "https://www.youtube.com/embed/tMw3VeoiSWU",
+  "https://www.youtube.com/embed/sRcflJhdHXQ",
+  "https://www.youtube.com/embed/oIyKReiX8yc"
 ];
 const prevButton = document.getElementById("prev-button");
 const nextButton = document.getElementById("next-button");
