--- a/index.html
+++ b/index.html
@@ -332,6 +332,27 @@ input {
   right: 100px;
   display: block;
 }
+/*about section*/
+.word-overlay { 
+  position: absolute; 
+  top: 45%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  z-index: 1; 
+  text-align: center;
+  color: white; 
+    }    
+ /*menu section*/
+.text-overlay {
+  position: absolute; 
+  top: 45%; 
+  left: 40%; 
+  transform: translate(-50%, -50%);
+  z-index: 1; 
+  text-align: center;
+  color: white; 
+    }
+        }
 @media screen and (min-width: 601px) and (max-width: 900px) {
   /* styles for screens between 601px and 900px */
   .header {
