--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ input {
         text-align: center;
         color: darkgoldenrod;
         width: 100%;
-        height: 40px;   
+        height: 90px;   
       }
     main {
         flex: 1;
@@ -282,6 +282,14 @@ input {
     padding: 20px;
     }
 
+ .centerimgabt{
+    top: 100px;
+    left: 290px;
+    display: block;
+    height: 950px; 
+    width: 850px; 
+    padding: 20px;
+    }
     .image-container {
   position: relative; /* set position to relative to create a positioning context for the child elements */
 }
@@ -289,7 +297,7 @@ input {
 .text-overlay {
   position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
   top: 45%; /* set the top property to 50% to position the element at the center of the container */
-  left: 40%; /* set the left property to 50% to position the element at the center of the container */
+  left: 55%; /* set the left property to 50% to position the element at the center of the container */
   transform: translate(-50%, -50%); /* use the transform property to center the element horizontally and vertically */
   z-index: 1; /* set the z-index property to a higher value than the image element to ensure the text appears on top */
   text-align: center;/* center the text horizontally within the element */
@@ -335,7 +343,7 @@ input {
 .word-overlay {
   position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
   top: 45%; /* set the top property to 50% to position the element at the center of the container */
-  left: 60%; /* set the left property to 50% to position the element at the center of the container */
+  left: 30%; /* set the left property to 50% to position the element at the center of the container */
   transform: translate(-50%, -50%); /* use the transform property to center the element horizontally and vertically */
   z-index: 1; 
   text-align: center;
@@ -369,7 +377,7 @@ input {
   width: 500px;
   height: 730px;
   top: 100px;
-  left: 130px;
+  left: 290px;
   position: absolute;
 }
 
@@ -378,7 +386,7 @@ input {
   width: 550px;
   height: 600px;
   top: 150px;
-  left: 290px;
+  left: 240px;
   position: absolute;
 }
 
