--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@ input {
         color: darkgoldenrod;
         width: 100%;
         height: 90px;   
+        display: block;
       }
+     
     main {
         flex: 1;
     }
@@ -284,7 +286,7 @@ input {
 
  .centerimgabt{
     top: 100px;
-    left: 290px;
+    left: 340px;
     display: block;
     height: 950px; 
     width: 850px; 
@@ -297,7 +299,7 @@ input {
 .text-overlay {
   position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
   top: 45%; /* set the top property to 50% to position the element at the center of the container */
-  left: 55%; /* set the left property to 50% to position the element at the center of the container */
+  left: 60%; /* set the left property to 50% to position the element at the center of the container */
   transform: translate(-50%, -50%); /* use the transform property to center the element horizontally and vertically */
   z-index: 1; /* set the z-index property to a higher value than the image element to ensure the text appears on top */
   text-align: center;/* center the text horizontally within the element */
@@ -343,7 +345,7 @@ input {
 .word-overlay {
   position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
   top: 45%; /* set the top property to 50% to position the element at the center of the container */
-  left: 30%; /* set the left property to 50% to position the element at the center of the container */
+  left: 80%; /* set the left property to 50% to position the element at the center of the container */
   transform: translate(-50%, -50%); /* use the transform property to center the element horizontally and vertically */
   z-index: 1; 
   text-align: center;
@@ -377,7 +379,7 @@ input {
   width: 500px;
   height: 730px;
   top: 100px;
-  left: 290px;
+  left: 340px;
   position: absolute;
 }
 
@@ -386,7 +388,7 @@ input {
   width: 550px;
   height: 600px;
   top: 150px;
-  left: 240px;
+  left: 320px;
   position: absolute;
 }
 
