--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ input {
         font-family: 'Rye', cursive;
         text-align: center;
         color: darkgoldenrod;
-        width: 100%;
+        width: 150%;
         height: 90px;   
         display: block;
       }
@@ -286,24 +286,24 @@ input {
 
  .centerimgabt{
     top: 100px;
-    left: 340px;
+    left: 650px;
     display: block;
     height: 950px; 
     width: 850px; 
     padding: 20px;
     }
     .image-container {
-  position: relative; /* set position to relative to create a positioning context for the child elements */
+  position: relative; \
 }
 
 .text-overlay {
-  position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
-  top: 45%; /* set the top property to 50% to position the element at the center of the container */
-  left: 60%; /* set the left property to 50% to position the element at the center of the container */
-  transform: translate(-50%, -50%); /* use the transform property to center the element horizontally and vertically */
-  z-index: 1; /* set the z-index property to a higher value than the image element to ensure the text appears on top */
-  text-align: center;/* center the text horizontally within the element */
-  color: white; /* set the color of the text to white */
+  position: absolute; 
+  top: 45%; 
+  left: 60%; 
+  transform: translate(-50%, -50%); 
+  z-index: 1; 
+  text-align: center;
+  color: white;
 }
 /* Left column*/
 .column.left{
@@ -343,10 +343,10 @@ input {
 }
 
 .word-overlay {
-  position: absolute; /* set position to absolute to position the element relative to its closest positioned ancestor */
-  top: 45%; /* set the top property to 50% to position the element at the center of the container */
-  left: 80%; /* set the left property to 50% to position the element at the center of the container */
-  transform: translate(-50%, -50%); /* use the transform property to center the element horizontally and vertically */
+  position: relative; 
+  top: 45%; 
+  left: 10%; 
+  transform: translate(-50%, -50%); 
   z-index: 1; 
   text-align: center;
   color: white; 
@@ -379,7 +379,7 @@ input {
   width: 500px;
   height: 730px;
   top: 100px;
-  left: 340px;
+  left: 650px;
   position: absolute;
 }
 
@@ -388,7 +388,7 @@ input {
   width: 550px;
   height: 600px;
   top: 150px;
-  left: 320px;
+  left: 110px;
   position: absolute;
 }
 
