--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="keywords" content="brisket, bbq, food, homemade food, homestyle bbq, bbq sauce">
-    <meta name="description" content="homestyle brisket, homemade bbq sauce and more">
-    <meta name="author" content="Tyler Gore">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="30">
+    <meta name="keywords" content="brisket, bbq, food, homemade food, homestyle bbq, bbq sauce"
+    <meta name="description" content="homestyle brisket, homemade bbq sauce and more"
+    <meta name="author" content="Tyler Gore"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta http-equiv="refresh" content="30"
           
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
