--- a/index.html
+++ b/index.html
@@ -218,10 +218,11 @@ input {
        width: 110%;
  }
     .barbed-bordermenu {
-         left: 230px;
+         left: 150px;
     }
     .word-overlay {
-        left: 70%;
+        left: 75%;
+        height: 150px;
     }
     .footer {
         position: fixed;
