--- a/index.html
+++ b/index.html
@@ -209,16 +209,16 @@ input {
     
                                                    /*phone style settings*/
     
-@media screen and (max-width: 600px) {
+@media screen (max-width: 600px) {
   .column.middle {
     width: 100%;
     align-items: center;
   }
    .header{
-       width: 110%;
+       width: 150%;
  }
     .barbed-bordermenu {
-         left: 150px;
+         left: 130px;
     }
     .word-overlay {
         left: 75%;
