--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="keywords" content="brisket, bbq, food, homemade food, homestyle bbq, bbq sauce">
     <meta name="description" content="homestyle brisket, homemade bbq sauce and more">
     <meta name="author" content="Tyler Gore">
-    <meta name="viewport" content="width=device-width, initial-scale=0.32">
+    <meta name="viewport" content="width=device-width, initial-scale=0.30">
     <meta http-equiv="refresh" content="30">
           
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -225,7 +225,7 @@ input {
         height: 90px;
     }
     .footer {
-        position: fixed;
+        position: static;
         width: 100%;
     }
     }
