--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     /* background image */
     body{
         background-image: url("https://static.vecteezy.com/system/resources/previews/007/287/322/non_2x/burnt-wooden-board-black-charcoal-wood-texture-burned-barbecue-background-free-photo.jpg");
-        background-repeat:repeat-y;
+        background-repeat:repeat-y, repeat-x;
+        transform: scaleX(-1);
         display: flex;
         flex-direction: column;
         min-height: 100vh; 
