--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ input {
         height: 90px;
     }
     .footer {
-        position: static;
+        position: sticky;
         width: 100%;
     }
     }
