--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@ input {
   background-color: black; 
   color: darkgoldenrod;
 }
-
+.button:hover { 
+    background-color: darkgoldenrod;
+    color: black;
+    }
 .barbed-borderabout {
   z-index: 3;
   width: 500px;
@@ -298,7 +301,7 @@ input {
         <input style="background-color:rgb(0, 0, 0);" cols="25" rows="1" type="text" name="fname" placeholder="first name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="lname" placeholder="last name" required><br>
         <input style="background-color: rgb(0, 0, 0);" type="text" cols="25" rows="1" name="address" placeholder="address"><br>
-        <textarea style="color: darkgoldenrod; background-color:rgb(0, 0, 0);" cols="25" rows="4" type="text" name="info" placeholder="extra info" required></textarea><br>
+        <textarea style="color: darkgoldenrod; background-color:rgb(0, 0, 0);" cols="25" rows="4" type="text" name="order info" placeholder="what would you like catered?" required></textarea><br>
         <input style="background-color:rgb(0, 0, 0)" type="email" cols="25" rows="1" name="email" placeholder="email" required><br>
         <button class="button" type="submit">Submit</button><br>
     </form>
